--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,16 +21,9 @@
     <filter>
         <whitelist>
             <directory suffix=".php">src/</directory>
+            <exclude>
+                <file>./src/Providers/SkeletonServiceProvider.php</file>
+            </exclude>
         </whitelist>
     </filter>
-    <php>
-        <env name="DB_CONNECTION" value="testing"/>
-    </php>
-    <logging>
-        <log type="tap" target="build/report.tap"/>
-        <log type="junit" target="build/report.junit.xml"/>
-        <log type="coverage-html" target="build/coverage"/>
-        <log type="coverage-text" target="build/coverage.txt"/>
-        <log type="coverage-clover" target="build/logs/clover.xml"/>
-    </logging>
 </phpunit>
