--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "friendsofphp/php-cs-fixer": "^2.16",
         "graham-campbell/analyzer": "^2.4",
         "orchestra/testbench": "^4.0",
+        "phpstan/phpstan": "^0.12.11",
         "phpunit/phpunit": "^8.3",
         "spatie/phpunit-snapshot-assertions": "^3.1",
         "symfony/var-dumper": "4.4"
@@ -41,7 +42,8 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test:coverage": "vendor/bin/phpunit --coverage-html=.coverage --coverage-clover=clover.xml",
-        "format": "vendor/bin/php-cs-fixer fix ./"
+        "format": "vendor/bin/php-cs-fixer fix ./",
+        "analyse": "vendor/bin/phpstan analyse"
     },
     "config": {
         "sort-packages": true
