phpstan memory limit

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "test": "vendor/bin/phpunit",
         "test:coverage": "vendor/bin/phpunit --coverage-html=.coverage --coverage-clover=clover.xml",
         "format": "vendor/bin/php-cs-fixer fix ./",
-        "analyse": "vendor/bin/phpstan analyse"
+        "analyse": "vendor/bin/phpstan analyse --memory-limit=2G"
     },
     "config": {
         "sort-packages": true
